--- a/produtos.html
+++ b/produtos.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styleInicio.css">
     <title>Bank System</title>
-    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Pizzaria</h1>
-        <div class="buttons">
-            <button class="btn" onclick="window.location.href='estoque.php'">Estoque</button>
+    <main>
+
+
+        <div class="container">
+            <h1>Pizzaria Dom João</h1>
+            <div class="buttons">
+                <button class="btn" onclick="window.location.href='estoque.php'">Estoque</button>
+                <button class="btn" onclick="window.location.href='pizzas.php'">Pizzas</button>
+
+            </div>
         </div>
-    </div>
+            <img src="pizza.png" alt="pizza">
+    </main>
 </body>
+
 </html>
