--- a/Estoque/produtos.html
+++ b/Estoque/produtos.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleInicio.css">
-    <title>Bank System</title>
+    <title>Pizzaria</title>
 </head>
 
 <body>
     <main>
-
-
         <div class="container">
             <h1>Pizzaria Dom João</h1>
             <div class="buttons">
