--- a/Vendas/menuVendas.html
+++ b/Vendas/menuVendas.html
@@ -12,7 +12,7 @@
     <main>
         <div class="main-container">
             <ul>
-                <img src="img/domJoao.jpg" alt="logo" class="logo">
+                <img id="logo" src="img/domJoao.jpg" alt="logo">
                 <li>
                     <h1>PIZZARIA DOM JOÃO</h1>
                 </li>
@@ -21,22 +21,14 @@
                         target="blink">Rua João Pessoa, 1726 Sl 04 - Velha - Blumenau/SC</a>
                 </li>
                 <li>
-                    <img src="img/pizzas.jpg" alt="pizza" class="pizza">
+                    <img id="pizza" src="img/pizzas.jpg" alt="pizza">
                 </li>
             </ul>
         </div>
         <div class="pizzas-container">
             <h1>Pizzas</h1>
             <ul>
-                <li>
-                    <img src="img/pizzaLove.jpg" alt="Pizza Love">
-                    <div class="description">
-                        <h2>PIZZA LOVE</h2>
-                        <p>PIZZA EM FORMATO DE CORAÇÃO, MISTA CHOCOLATE BRANCO E PRETO</p>
-                        <p class="price">A partir de R$ 20,00</p>
-                    </div>
-                </li>
-                <li>
+                <li data-title="PIZZA BABY" onclick="navigateToPizza('PIZZA BABY', 1)">
                     <img src="img/pizzaBaby.jpg" alt="Pizza Baby">
                     <div class="description">
                         <h2>PIZZA BABY</h2>
@@ -44,7 +36,7 @@
                         <p class="price">A partir de R$ 29,90</p>
                     </div>
                 </li>
-                <li>
+                <li data-title="PIZZA MÉDIA" onclick="navigateToPizza('PIZZA MÉDIA', 2)">
                     <img src="img/pizzaMedia.jpg" alt="Pizza Média">
                     <div class="description">
                         <h2>PIZZA MÉDIA</h2>
@@ -52,18 +44,18 @@
                         <p class="price">A partir de R$ 58,90</p>
                     </div>
                 </li>
-                <li>
+                <li data-title="PIZZA GRANDE" onclick="navigateToPizza('PIZZA GRANDE', 3)">
                     <img src="img/pizzaGrande.jpg" alt="Pizza Grande">
                     <div class="description">
-                        <h2>PIZZA Grande</h2>
+                        <h2>PIZZA GRANDE</h2>
                         <p>35cm, 12 fatias, 3 sabores</p>
                         <p class="price">A partir de R$ 76,90</p>
                     </div>
                 </li>
-                <li>
+                <li data-title="PIZZA GIGANTE" onclick="navigateToPizza('PIZZA GIGANTE', 4)">
                     <img src="img/pizzaGigante.jpg" alt="Pizza Gigante">
                     <div class="description">
-                        <h2>PIZZA MÉDIA</h2>
+                        <h2>PIZZA GIGANTE</h2>
                         <p>45cm, 16 fatias, 4 sabores</p>
                         <p class="price">A partir de R$ 87,90</p>
                     </div>
@@ -71,6 +63,14 @@
             </ul>
         </div>
     </main>
+    <script>
+        function navigateToPizza(pizzaName, numSabores) {
+            const url = new URL('http://localhost/projeto_pizzariaSite/Vendas/pizzas.php', window.location.origin);
+            url.searchParams.set('pizza', pizzaName);
+            url.searchParams.set('num_sabores', numSabores);
+            window.location.href = url;
+        }
+    </script>
 </body>
 
 </html>
