--- a/Estoque/produtos.html
+++ b/Estoque/produtos.html
@@ -15,7 +15,7 @@
             <div class="buttons">
                 <button class="btn" onclick="window.location.href='estoque.php'">Estoque</button>
                 <button class="btn" onclick="window.location.href='pizzas.php'">Pizzas</button>
-                <button class="btn" onclick="window.location.href='/projeto_pizzariaSite/Vendas/menuVendas.php'">Vendas</button>
+                <button class="btn" onclick="window.location.href='/projeto_pizzariaSite/Vendas/menuVendas.html'">Vendas</button>
 
             </div>
         </div>
