adicionado botao login para fazer o login ou cadastro do cliente

--- a/Vendas/menuVendas.html
+++ b/Vendas/menuVendas.html
@@ -10,6 +10,9 @@
 
 <body>
     <main>
+        <div class="login">
+            <button id="login" onclick="window.location.href='login_cadastro.html'">Login</button>
+        </div>
         <div class="main-container">
             <ul>
                 <img id="logo" src="img/domJoao.jpg" alt="logo">
