--- a/Vendas/login_cadastro.html
+++ b/Vendas/login_cadastro.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
   <link rel="stylesheet" type="text/css" href="styleLogin.css">
+  <title>Login</title>
 </head>
+
 <body>
   <div class="wrapper">
     <div class="form-wrapper sign-in">
       <form action="login.php" method="post">
         <h2>Login</h2>
         <div class="input-group">
-          <input type="text" required>
+          <input type="text" name="email" required>
           <label for="">Email</label>
         </div>
         <div class="input-group">
-          <input type="password" required>
+          <input type="password" name="senha" required>
           <label for="">Senha</label>
         </div>
         <button type="submit">Login</button>
@@ -50,7 +51,7 @@
           <label for="">Senha</label>
         </div>
         <div class="remember">
-          <label><input type="checkbox"> Eu aceito os termos e condições</label>
+          <label><input type="checkbox" required> Eu aceito os termos e condições</label>
         </div>
         <button type="submit">Cadastre-se</button>
         <div class="signUp-link">
@@ -59,6 +60,7 @@
       </form>
     </div>
   </div>
-  <script src="scriptLogin.js"></script>
 </body>
+<script src="scriptLogin.js"></script>
+
 </html>
