mudanças para melhor funcionalidade e visibilidade

--- a/Vendas/menuVendas.html
+++ b/Vendas/menuVendas.html
@@ -33,7 +33,7 @@
         <div class="pizzas-container">
             <h1>Pizzas</h1>
             <ul>
-                <li data-title="PIZZA BABY" onclick="navigateToPizza('PIZZA BABY', 1)">
+                <li data-title="PIZZA BABY" onclick="navigateToPizza('PIZZA BABY', 1, 'clienteId')">
                     <img src="img/pizzaBaby.jpg" alt="Pizza Baby">
                     <div class="description">
                         <h2>PIZZA BABY</h2>
@@ -41,7 +41,7 @@
                         <p class="price">A partir de R$ 29,90</p>
                     </div>
                 </li>
-                <li data-title="PIZZA MÉDIA" onclick="navigateToPizza('PIZZA MÉDIA', 2)">
+                <li data-title="PIZZA MÉDIA" onclick="navigateToPizza('PIZZA MÉDIA', 2, 'clienteId')">
                     <img src="img/pizzaMedia.jpg" alt="Pizza Média">
                     <div class="description">
                         <h2>PIZZA MÉDIA</h2>
@@ -49,7 +49,7 @@
                         <p class="price">A partir de R$ 58,90</p>
                     </div>
                 </li>
-                <li data-title="PIZZA GRANDE" onclick="navigateToPizza('PIZZA GRANDE', 3)">
+                <li data-title="PIZZA GRANDE" onclick="navigateToPizza('PIZZA GRANDE', 3, window.clienteId)">
                     <img src="img/pizzaGrande.jpg" alt="Pizza Grande">
                     <div class="description">
                         <h2>PIZZA GRANDE</h2>
@@ -57,7 +57,7 @@
                         <p class="price">A partir de R$ 76,90</p>
                     </div>
                 </li>
-                <li data-title="PIZZA GIGANTE" onclick="navigateToPizza('PIZZA GIGANTE', 4)">
+                <li data-title="PIZZA GIGANTE" onclick="navigateToPizza('PIZZA GIGANTE', 4, window.clienteId)">
                     <img src="img/pizzaGigante.jpg" alt="Pizza Gigante">
                     <div class="description">
                         <h2>PIZZA GIGANTE</h2>
