--- a/Vendas/menuVendas.html
+++ b/Vendas/menuVendas.html
@@ -33,7 +33,7 @@
         <div class="pizzas-container">
             <h1>Pizzas</h1>
             <ul>
-                <li data-title="PIZZA BABY" onclick="navigateToPizza('PIZZA BABY', 1, 'clienteId')">
+                <li data-title="PIZZA BABY" onclick="navigateToPizza('PIZZA BABY', 1, window.clienteId)">
                     <img src="img/pizzaBaby.jpg" alt="Pizza Baby">
                     <div class="description">
                         <h2>PIZZA BABY</h2>
@@ -41,7 +41,7 @@
                         <p class="price">A partir de R$ 29,90</p>
                     </div>
                 </li>
-                <li data-title="PIZZA MÉDIA" onclick="navigateToPizza('PIZZA MÉDIA', 2, 'clienteId')">
+                <li data-title="PIZZA MÉDIA" onclick="navigateToPizza('PIZZA MÉDIA', 2, window.clienteId)">
                     <img src="img/pizzaMedia.jpg" alt="Pizza Média">
                     <div class="description">
                         <h2>PIZZA MÉDIA</h2>
